JumpScript/tests/baselines/reference/classAbstractManyKeywords.errors.txt
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractManyKeywords.jump(3,1): error TS1128: Declaration or statement expected.
tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractManyKeywords.jump(4,17): error TS1005: '=' expected.


==== tests/cases/conformance/classes/classDeclarations/classAbstractKeyword/classAbstractManyKeywords.jump (2 errors) ====
    export default abstract class A {}
    export abstract class B {}
    default abstract class C {}
    ~~~~~~~
!!! error TS1128: Declaration or statement expected.
    import abstract class D {}
                    ~~~~~
!!! error TS1005: '=' expected.